<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">Notty Note</string>

    
    <string name="txt_empty_list">No notes</string>
    
    <string name="txt_note_type_prompt">Choose a note type</string>
    
    <string name="txt_save">Save</string>
    
    <string name="txt_cancel">Cancel</string>
    
    <string name="txt_note_saved">Note saved</string>
    
    <string name="txt_note_content_cannot_be_empty">Content cannot be empty</string>
    
    <string name="txt_title_add">Add note</string>
    
    <string name="txt_title_edit">Edit note</string>
    
    <string name="txt_note_content">Note content</string>
    
    <string name="txt_remove">Remove?</string>
    
    <string name="txt_no">No</string>
    
    <string name="txt_yes">Yes</string>
    
    <string name="txt_note_deleted">Note deleted</string>
    
    <string name="txt_title_manage">Manage</string>
    
    <string name="txt_choosed">"%d choosed"</string>
    
    <string name="txt_notes_deleted">Notes deleted</string>
    
    <string name="txt_edit">Edit</string>
    
    <string name="txt_delete">Delete</string>
    
    <string name="label_list">NottyNote list</string>
    <string name="label_stack">NottyNote stack</string>
    
    <string name="txt_info">"Now you have to add one of the widgets to your homescreen."</string>
    
    <string name="txt_info_1">"You will find them in your widgets list."</string>
    
    <string name="txt_list">List</string>
    
    <string name="txt_stack">Stack</string>
    
    <string name="txt_ok">Ok</string>
    
    <string-array name="types_array">
        <item>Standard</item>
        <item>ToDo</item>
    </string-array>
</resources>