<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout 
	    android:layout_width="280dp"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
	    android:orientation="vertical"
	    android:background="@color/action_bar_background"
	    android:id="@+id/main_layout"
	    >
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        style="@android:style/Widget.Holo.ActionBar"
	        android:background="@color/action_bar_background"
	        >
	        <ImageView 
	            android:src="@drawable/ic_launcher"
	            android:layout_width="35dp"
	            android:layout_height="35dp"
	            android:layout_margin="5dp"/>
	        <TextView 
	            android:id="@+id/info_title"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/app_name"
	            style="@android:style/TextAppearance.Holo.Medium"
	            android:layout_gravity="center_vertical"
	            android:textColor="@android:color/holo_blue_light"/>
	    </LinearLayout>
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="2dp"
	        android:background="@android:color/holo_blue_light"/>
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@android:style/TextAppearance.Holo.Medium"
	        android:gravity="center_horizontal"
	        android:text="@string/txt_info"
	        android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/button_list"
            android:layout_width="260dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:gravity="right|center_vertical"
            android:layout_marginBottom="10dp"
            style="@android:style/TextAppearance.Holo.Small"
            android:text="@string/label_list"
            android:drawableLeft="@drawable/simplenote_list_ori_portrait_small"/>

        <TextView
            android:id="@+id/button_stack"
            android:layout_width="260dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:gravity="right|center_vertical"
            style="@android:style/TextAppearance.Holo.Small"
            android:text="@string/label_stack"
            android:drawableLeft="@drawable/simplenote_stack_ori_portrait_small"/>
	    
        <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@android:style/TextAppearance.Holo.Medium"
	        android:gravity="center_horizontal"
	        android:text="@string/txt_info_1"
	        android:layout_margin="10dp"/>
        
        <View 
		        android:layout_height="1dp"
		        android:layout_width="match_parent"
		        android:background="@color/key_separator"
		        />
        
        <Button
	            android:id="@+id/ok"
	            android:layout_height="wrap_content"
	            android:layout_width="match_parent"
	            android:text="@string/txt_ok"
	            style="@android:style/Widget.Holo.Button.Borderless"
	            />
    </LinearLayout>

</RelativeLayout>