<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:orientation="vertical">
	<LinearLayout 
	    android:layout_width="@dimen/app_width"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical|center_horizontal"
	    android:orientation="vertical"
	    android:background="@color/app_content_background"
	    >
		<LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        style="@android:style/Widget.Holo.ActionBar"
	        >
	        <ImageView 
	            android:src="@drawable/ic_launcher"
	            android:layout_width="35dp"
	            android:layout_height="35dp"
	            android:layout_margin="5dp"/>
	        <TextView 
	            android:id="@+id/title"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/txt_remove"
	            android:layout_gravity="center_vertical"
	            style="@android:style/TextAppearance.Holo.Medium"/>
	            
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:background="@color/app_content_background">
	        <Button 
	            android:id="@+id/no"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            style="@android:style/Widget.Holo.Button.Borderless"
	            android:text="@string/txt_no"
	            />
	        <LinearLayout 
		        android:layout_height="match_parent"
		        android:layout_width="1dp"
		        android:background="@android:color/holo_blue_light"
		        />
	        <Button 
	            android:id="@+id/yes"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            style="@android:style/Widget.Holo.Button.Borderless"
	            android:text="@string/txt_yes"
	            />
	    </LinearLayout>
	    <LinearLayout 
		        android:layout_height="2dp"
		        android:layout_width="match_parent"
		        android:background="@android:color/holo_blue_light"
		        />
	</LinearLayout>

	

</LinearLayout>