<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:orientation="vertical">
	<LinearLayout 
	    android:layout_width="@dimen/app_width"
		android:layout_height="@dimen/app_height"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="@dimen/main_note_top_margin"
	    android:orientation="vertical"
	    android:background="@color/app_content_background"
	    android:id="@+id/main_layout"
	    >
		<LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        style="@android:style/Widget.Holo.ActionBar"
	        android:background="@color/action_bar_background"
	        >
	        <ImageView 
	            android:src="@drawable/ic_launcher"
	            android:layout_width="35dp"
	            android:layout_height="35dp"
	            android:layout_margin="5dp"/>
	        <TextView 
	            android:id="@+id/title"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/app_name"
	            style="@android:style/TextAppearance.Holo.Medium"
	            android:layout_gravity="center_vertical"
	            android:textColor="@color/light_blue"/>
	        <ImageButton 
			    android:id="@+id/remove"
			    android:layout_width="35dp"
			    android:layout_height="35dp"
			    android:layout_margin="5dp"
			    android:src="@android:drawable/ic_menu_delete"
			    style="@android:style/Widget.Holo.Button.Borderless"
			    />
	    </LinearLayout>

		<View 
		        android:layout_height="2dp"
		        android:layout_width="match_parent"
		        android:background="@color/light_blue"
		        />
		
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:background="@color/widget_content_background"
		    android:layout_height="0dp"
			android:layout_weight="1">
		    
		
		    <EditText
			    android:id="@+id/note_edit"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:inputType="textMultiLine"
			    android:hint="@string/txt_note_content"
			    android:textColor="@android:color/black"
			    android:textCursorDrawable="@null"
			    android:gravity="top"
			    >
		
			    <requestFocus />
			</EditText>
		
	    </LinearLayout>
	    
		<View 
		        android:layout_height="2dp"
		        android:layout_width="match_parent"
		        android:background="@color/light_blue"
		        />
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:background="@color/action_bar_background">
	        <Button 
	            android:id="@+id/cancel"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            style="@android:style/Widget.Holo.Button.Borderless"
	            android:text="@string/txt_cancel"
	            />
	        <View 
		        android:layout_height="match_parent"
		        android:layout_width="1dp"
		        android:background="@color/key_separator"
		        />
	        <Button 
	            android:id="@+id/save"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            style="@android:style/Widget.Holo.Button.Borderless"
	            android:text="@string/txt_save"
	            />
	    </LinearLayout>
	    
	</LinearLayout>

	

</LinearLayout>